# tinyWiFi

./: CHANGELOG.md  Cargo.toml  README.md
configs/: hostapd.conf  nanodhcp.conf  nanodhcp.toml  nanodns.conf  nftables.nft  tinywifi.toml
crates/tinywifi-core/: Cargo.toml
crates/tinywifi-core/src/: acl.rs  adblock.rs  amnezia.rs  config.rs  file.rs  hostapd.rs  interface.rs  leases.rs  lib.rs  metrics.rs  monitor.rs  nanodhcp.rs  nanodns.rs  safety.rs  service.rs  status.rs  wan.rs  wifi.rs
crates/tinywifi-display/: Cargo.toml
crates/tinywifi-display/src/: epaper.rs  main.rs  render.rs  status.rs
crates/tinywifi-web/: Cargo.toml
crates/tinywifi-web/assets/: style.css
crates/tinywifi-web/src/: api.rs  assets.rs  auth.rs  main.rs  pages.rs  state.rs  tests.rs
deploy/: README.md  web.toml
deploy/init.d/: hostapd  nanodhcp
