[workspace]
resolver = "2"
members = [
    "crates/tinywifi-core",
    "crates/tinywifi-web",
    "crates/tinywifi-display",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/aleksei/tinyWiFi"

[workspace.dependencies]
tinywifi-core = { path = "crates/tinywifi-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
