[package]
name = "tinywifi-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
base64 = "0.22"
flate2 = "1"

[dev-dependencies]
tempfile = "3"
