[package]
name = "tinywifi-display"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
tinywifi-core = { workspace = true }
rppal         = "0.14"
epd-waveshare = { version = "0.5", features = ["epd2in13_v2", "graphics"] }
embedded-graphics = "0.7"
embedded-hal  = "0.2"
