[package]
name = "tinywifi-web"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
tinywifi-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
axum = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "signal"] }
