[package]
name = "tinywifi-web"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
tinywifi-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
axum = { version = "0.7", features = ["form"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "signal"] }
argon2 = "0.5"
rand = "0.8"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
tempfile = "3"
